removed /agenda suffix!

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,14 +5,14 @@
     <title>{% if page.collection == "motions" %}{{ page.title }} (#{% unless page.section.size > 3 %}{{ page.section }}{% endunless %}{% if page.section.size > 1 %}&nbsp;{% endif %}{% if page.number < 10 %}0{% endif %}{{ page.number }}) • {% endif %}{{ site.title }}</title>
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl}}/css/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl}}/css/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl}}/css/icons/favicon-16x16.png">
-    <link rel="manifest" href="{{ site.baseurl}}/css/icons/site.webmanifest">
-    <link rel="mask-icon" href="{{ site.baseurl}}/css/icons/safari-pinned-tab.svg" color="#006341">
-    <link rel="shortcut icon" href="{{ site.baseurl}}/css/icons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="76x76" href="/css/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/css/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/css/icons/favicon-16x16.png">
+    <link rel="manifest" href="/css/icons/site.webmanifest">
+    <link rel="mask-icon" href="/css/icons/safari-pinned-tab.svg" color="#006341">
+    <link rel="shortcut icon" href="/css/icons/favicon.ico">
     <meta name="msapplication-TileColor" content="#00a300">
-    <meta name="msapplication-config" content="{{ site.baseurl}}/css/icons/browserconfig.xml">
+    <meta name="msapplication-config" content="/css/icons/browserconfig.xml">
     <meta name="theme-color" content="#00a300">
 
     <!-- Fonts -->
@@ -21,8 +21,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
     <!-- Styles (including Bootstrap) -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/light.css" media="(prefers-color-scheme: light)">
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/dark.css" media="(prefers-color-scheme: dark)">
+    <link rel="stylesheet" href="/css/light.css" media="(prefers-color-scheme: light)">
+    <link rel="stylesheet" href="/css/dark.css" media="(prefers-color-scheme: dark)">
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KJ1FD32XK8"></script>
