--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary sticky-top shadow-sm">
   <div class="container">
-    <a class="navbar-brand p-0" href="{{ site.baseurl }}/"><img height="32" class="pe-1 d-inline-block align-text-center" src="{{ site.baseurl }}/css/icons/gpew-logo.png"><span class="d-none d-md-inline">{{ site.title }}</span></a>
+    <a class="navbar-brand p-0" href="/"><img height="32" class="pe-1 d-inline-block align-text-center" src="/css/icons/gpew-logo.png"><span class="d-none d-md-inline">{{ site.title }}</span></a>
     <div class="btn-group">
       <button class="d-md-none btn btn-clear" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="toggle" aria-expanded="false" aria-label="Toggle navigation">
         <i class="bi bi-justify"></i>
