--- a/_includes/archive_notice.html
+++ b/_includes/archive_notice.html
@@ -3,7 +3,7 @@
       <i class="bi bi-clock-history pe-3 h1 m-0"></i>
       <div class="wrapper">
         <h4>This page is archived.</h4>
-        <p>To see the most recent content, <a class="link-light" href="{{ site.url }}/{{ site.baseurl}}">please visit the homepage.</a></p>
+        <p>To see the most recent content, <a class="link-light" href="{{ site.url }}">please visit the homepage.</a></p>
       </div>
   </div>
 </aside>
