added netlify goodness

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,4 +33,7 @@
 
       gtag('config', 'G-KJ1FD32XK8', {cookie_flags: 'SameSite=None;Secure'});
     </script>
+
+    <!-- Netlify Identity Widget -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
