--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,4 +8,19 @@
   return new bootstrap.Tooltip(tooltipTriggerEl)
 })
 </script>
+
+<!-- Dark mode toggle -->
 <script type="module" src="https://googlechromelabs.github.io/dark-mode-toggle/src/dark-mode-toggle.mjs"></script>
+
+<!-- Netlify Identity -->
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
