--- a/_layouts/appendix.html
+++ b/_layouts/appendix.html
@@ -1,7 +1,7 @@
 ---
 layout: primary
 ---
-<h2 class="small text-muted">Appendix #{{ page.number }}</h2>
+<h2 class="small text-muted">Appendix #{{ page.motion_code.number }}</h2>
 <h1>{{ page.title }}</h1>
 
 {{ content }}
