Improved alert styles

--- a/css/main.scss
+++ b/css/main.scss
@@ -225,3 +225,11 @@ dark-mode-toggle {
     margin-bottom:0;
   }
 }
+
+.alert {
+  width:100%;
+  .alert-title {
+    font-weight:600;
+    text-decoration:underline;
+  }
+}
