--- a/_layouts/motion.html
+++ b/_layouts/motion.html
@@ -57,5 +57,7 @@ layout: primary
 
 <div class="info mb-3">
   <p class="text-muted">Last updated on {{ page.last-modified-date | date: "%Y-%m-%d at %H:%M" }}</p>
-  <a href="{{ page.spaces }}"><button type="button" class="btn btn-secondary">View on Green Spaces</button></a>
+  {% if page.spaces %}
+    <a href="{{ page.spaces }}"><button type="button" class="btn btn-secondary">View on Green Spaces</button></a>
+  {% endif %}
 </div>
